Debian changelog changed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+exposong (0.8) unstable; urgency=low
+
+  * New ExpoSong release
+
+ -- Samuel Mehrbrodt <s.mehrbrodt@gmail.com>  Fri, 02 Dec 2011 23:46:37 +0100
+
 exposong (0.7.1) lucid; urgency=low
 
   * New ExpoSong release
