--- a/share/exposong/i18n/en_GB/en_GB.po
+++ b/share/exposong/i18n/en_GB/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: exposong\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-10-27 21:00+0200\n"
-"PO-Revision-Date: 2011-10-28 23:22+0000\n"
+"PO-Revision-Date: 2011-12-23 16:18+0000\n"
 "Last-Translator: Anthony Harrington <untaintableangel@hotmail.co.uk>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-29 05:27+0000\n"
-"X-Generator: Launchpad (build 14197)\n"
+"X-Launchpad-Export-Date: 2011-12-24 06:22+0000\n"
+"X-Generator: Launchpad (build 14560)\n"
 
 #: lib/exposong/about.py:37
 #, python-format
@@ -64,23 +64,23 @@ msgstr "Choose Folder"
 
 #: lib/exposong/gui.py:368
 msgid "Language Code"
-msgstr ""
+msgstr "Language Code"
 
 #: lib/exposong/help.py:51
 msgid "Help page opened in Web Browser"
-msgstr ""
+msgstr "Help page opened in Web Browser"
 
 #: lib/exposong/help.py:56
 msgid "Checking for updates ..."
-msgstr ""
+msgstr "Checking for updates ..."
 
 #: lib/exposong/help.py:64
 msgid "An Error Occurred"
-msgstr ""
+msgstr "An Error Occurred"
 
 #: lib/exposong/help.py:68
 msgid "A New Version is Available"
-msgstr ""
+msgstr "A New Version is Available"
 
 #: lib/exposong/help.py:72
 msgid "ExpoSong is Up to Date"
@@ -89,7 +89,7 @@ msgstr ""
 #: lib/exposong/help.py:94
 #, python-format
 msgid "Could not read the website (error code %d)."
-msgstr ""
+msgstr "Could not read the website (error code %d)."
 
 #: lib/exposong/help.py:100
 #, python-format
@@ -97,15 +97,17 @@ msgid ""
 "A new version (%s) is available. Would you like to be taken to the download "
 "page?"
 msgstr ""
+"A new version (%s) is available. Would you like to be taken to the download "
+"page?"
 
 #: lib/exposong/help.py:104
 msgid "You are using the most recent version."
-msgstr ""
+msgstr "You are using the most recent version."
 
 #: lib/exposong/help.py:107
 #, python-format
 msgid "Could not connect to %s."
-msgstr ""
+msgstr "Could not connect to %s."
 
 #: lib/exposong/help.py:125
 msgid "ExpoSong Help"
