--- a/share/exposong/i18n/fr/fr.po
+++ b/share/exposong/i18n/fr/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: exposong\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-10-27 21:00+0200\n"
-"PO-Revision-Date: 2011-11-01 17:05+0000\n"
-"Last-Translator: Olivier FEBWIN <febwin@free.fr>\n"
+"PO-Revision-Date: 2013-01-26 12:44+0000\n"
+"Last-Translator: Hélion du Mas des Bourboux <helion331990@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-02 05:05+0000\n"
-"X-Generator: Launchpad (build 14214)\n"
+"X-Launchpad-Export-Date: 2013-01-27 04:41+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: lib/exposong/about.py:37
 #, python-format
@@ -32,10 +32,12 @@ msgstr ""
 "  ButterflyOfFire https://launchpad.net/~butterflyoffire\n"
 "  Dominique CHOMET https://launchpad.net/~inimod\n"
 "  Gabriel U. https://launchpad.net/~gabriel-ull\n"
+"  Hélion du Mas des Bourboux https://launchpad.net/~helion331990\n"
 "  Jean-Paul GERST https://launchpad.net/~jp-gerst\n"
+"  Jerome Portal https://launchpad.net/~portal-j\n"
 "  Nicolas Delvaux https://launchpad.net/~malizor\n"
 "  Olivier FEBWIN https://launchpad.net/~febcrash\n"
-"  PEIGNOT Kévin https://launchpad.net/~winniemiel05\n"
+"  PEIGNOT Kévin https://launchpad.net/~kpeignot\n"
 "  Phnx https://launchpad.net/~julien-gosme\n"
 "  Pierre Slamich https://launchpad.net/~pierre-slamich\n"
 "  Quentin Pagès https://launchpad.net/~kwentin\n"
@@ -51,7 +53,7 @@ msgstr "Ecrit par : %s"
 #: lib/exposong/exampleslide.py:50
 #, python-format
 msgid "Generated from: %s"
-msgstr ""
+msgstr "Généré depuis : %s"
 
 #: lib/exposong/gtklogger.py:71
 msgid "Filter Severity:"
@@ -318,7 +320,7 @@ msgstr "Autres"
 
 #: lib/exposong/help.py:211 lib/exposong/plugins/lyric.py:1112
 msgid "New Song"
-msgstr ""
+msgstr "Nouvelle musique"
 
 #: lib/exposong/help.py:211
 msgid "Ctrl+N"
@@ -890,7 +892,7 @@ msgstr "Copyright"
 
 #: lib/exposong/themeeditor.py:168
 msgid "Description"
-msgstr ""
+msgstr "Description"
 
 #: lib/exposong/themeeditor.py:169
 msgid "Tags"
@@ -964,7 +966,7 @@ msgstr "Bas"
 
 #: lib/exposong/themeeditor.py:231
 msgid "Vertical Text Alignment"
-msgstr ""
+msgstr "Aligner le texte verticalement"
 
 #: lib/exposong/themeeditor.py:234
 msgid "Line Spacing"
@@ -976,7 +978,7 @@ msgstr "Ombre du texte"
 
 #: lib/exposong/themeeditor.py:242
 msgid "Apply Shadow"
-msgstr ""
+msgstr "Appliquer l'ombre"
 
 #: lib/exposong/themeeditor.py:249
 msgid "x-Offset"
@@ -1050,7 +1052,7 @@ msgstr "Angle"
 
 #: lib/exposong/themeeditor.py:606
 msgid "Length"
-msgstr ""
+msgstr "Durée"
 
 #: lib/exposong/themeeditor.py:611
 msgid "Horizontal Position"
@@ -1204,15 +1206,15 @@ msgstr ""
 
 #: lib/exposong/plugins/export_import.py:298
 msgid "Replace existing Song"
-msgstr ""
+msgstr "Remplacer la musique existante"
 
 #: lib/exposong/plugins/export_import.py:300
 msgid "Keep existing Song"
-msgstr ""
+msgstr "Garder la musique existante"
 
 #: lib/exposong/plugins/export_import.py:302
 msgid "Keep both Songs"
-msgstr ""
+msgstr "Garder les deux musiques"
 
 #: lib/exposong/plugins/export_import.py:357
 msgid "Import"
@@ -1232,7 +1234,7 @@ msgstr ""
 
 #: lib/exposong/plugins/export_import.py:522
 msgid "Current _Song"
-msgstr ""
+msgstr "_Musique actuelle"
 
 #: lib/exposong/plugins/export_import.py:525
 msgid "_Current Schedule with Presentations..."
@@ -1244,7 +1246,7 @@ msgstr "_Librairie complète..."
 
 #: lib/exposong/plugins/export_import.py:529
 msgid "Current _Theme..."
-msgstr ""
+msgstr "_Thème actuel..."
 
 #: lib/exposong/plugins/legacy_format_convert.py:38
 msgid "ExpoSong Converter"
@@ -1272,7 +1274,7 @@ msgstr "Importer une présentation Lyric d'un ExpoSong antérieure à 0.7"
 
 #: lib/exposong/plugins/lyric.py:47
 msgid "Song"
-msgstr ""
+msgstr "Musique"
 
 #: lib/exposong/plugins/lyric.py:57
 msgid "Words"
@@ -1523,11 +1525,11 @@ msgstr "Ordre :"
 
 #: lib/exposong/plugins/lyric.py:1108
 msgid "_Song"
-msgstr ""
+msgstr "_Musique"
 
 #: lib/exposong/plugins/lyric.py:1113
 msgid "Create a new song"
-msgstr ""
+msgstr "Créer une nouvelle musique"
 
 #: lib/exposong/plugins/lyric.py:1168 lib/exposong/plugins/pres.py:827
 msgid "Editing Slide"
