--- a/share/exposong/i18n/ug/ug.po
+++ b/share/exposong/i18n/ug/ug.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: exposong\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-10-27 21:00+0200\n"
-"PO-Revision-Date: 2011-06-05 23:18+0000\n"
+"PO-Revision-Date: 2011-12-29 11:53+0000\n"
 "Last-Translator: Gheyret T.Kenji <Unknown>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-28 05:40+0000\n"
-"X-Generator: Launchpad (build 14197)\n"
+"X-Launchpad-Export-Date: 2011-12-30 05:52+0000\n"
+"X-Generator: Launchpad (build 14560)\n"
 
 #: lib/exposong/about.py:37
 #, python-format
@@ -60,7 +60,7 @@ msgstr "ھۆججەت تاللاڭ"
 
 #: lib/exposong/gui.py:258
 msgid "Choose Folder"
-msgstr "قىسقۇچ تاللاڭ"
+msgstr "قىسقۇچ تاللاش"
 
 #: lib/exposong/gui.py:368
 msgid "Language Code"
